--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
+    "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
